# NLP-LLM-SS2026

./: .gitignore  README.md  pyproject.toml
data/EvaLatin_2024_Syntactic_Parsing_test_data_gold/: EvaLatin_2024_poetry_gold.conllu  EvaLatin_2024_prose_gold.conllu
docs/: 00_task_explained.md  01_findings.md
notebooks/: 01_explore_data.ipynb  02_compare_models.ipynb  03_explore_past_runs.ipynb
predictions/byt5-small-balanced/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/byt5-small-multi/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/byt5-small-perseus/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/deepseek-deepseek-chat-v3-0324/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/google-gemini-2.5-flash/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/google-gemini-3-flash-preview/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/latin-perseus-ud-2.15-241121/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/latin-perseus-ud-2.17-251125/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/latinpipe/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/qwen-qwen3-235b-a22b-2507/: poetry_pred.conllu  prose_pred.conllu  scores.json
predictions/qwen3-0.6b-mlx-2shot-perseus/: poetry_pred.conllu  prose_pred.conllu  scores.json
scripts/: run_openrouter.py
src/latinbench/: __init__.py  (+6 more)
tests/: test_core.py  test_few_shot.py  test_lmstudio_llm.py  test_ollama_llm.py  test_openrouter_llm.py  test_run_openrouter_script.py
(+33 files in other folders)
