[project]
name = "latinbench"
version = "0.1.0"
description = "Bench for evaluating dependency parsers on EvaLatin 2024 test data."
requires-python = ">=3.12"
dependencies = [
    # Notebook + core utilities
    "jupyter",
    "conllu",
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    # LatinPipe runtime (so user-written models can also use these directly)
    "keras",
    "torch",
    "transformers",
    "ufal.chu-liu-edmonds",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latinbench"]
artifacts = ["src/latinbench/*.conllu"]
